--- a/Demos/python-jupyter-demo/test/test.ipynb
+++ b/Demos/python-jupyter-demo/test/test.ipynb
@@ -21,6 +21,49 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4fa5e30b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ['234234', '234234']\n",
+    "len(a)\n",
+    "b = len(a[len(a) - 1])\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "689fbd1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ttt 567567\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = { 'data': 'ttt', 'result': 567567}\n",
+    "print(c['data'], c['result'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "9711acc4",
    "metadata": {},
    "outputs": [
@@ -38,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e1555ef8",
    "metadata": {},
    "outputs": [
@@ -56,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "abd12e38",
    "metadata": {},
    "outputs": [],
@@ -66,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "fb9d668f",
    "metadata": {},
    "outputs": [],
@@ -76,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "92e5ee4f",
    "metadata": {},
    "outputs": [],
@@ -86,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "80d5a1d8",
    "metadata": {},
    "outputs": [
@@ -119,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "5957881c",
    "metadata": {},
    "outputs": [
@@ -127,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pls enter your final grade:95\n"
+      "pls enter your final grade:99\n"
      ]
     }
    ],
@@ -137,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "93679e6a",
    "metadata": {},
    "outputs": [],
@@ -147,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "d9733f0f",
    "metadata": {},
    "outputs": [
@@ -155,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pls enter your normal homework grades:95\n"
+      "pls enter your normal homework grades:99\n"
      ]
     }
    ],
@@ -165,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "18848995",
    "metadata": {},
    "outputs": [],
@@ -175,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "41bcc078",
    "metadata": {},
    "outputs": [
@@ -183,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pls enter your attendance:0.99\n"
+      "pls enter your attendance:100\n"
      ]
     }
    ],
@@ -193,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "4ba329e5",
    "metadata": {},
    "outputs": [],
@@ -203,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "fd768720",
    "metadata": {},
    "outputs": [
@@ -211,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pls enter your Mid-term grades95\n"
+      "pls enter your Mid-term grades90\n"
      ]
     }
    ],
@@ -221,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "d391939d",
    "metadata": {},
    "outputs": [],
@@ -231,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "d9ca3a71",
    "metadata": {},
    "outputs": [],
@@ -241,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "f6cf6dcc",
    "metadata": {},
    "outputs": [],
@@ -251,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "bfc0d6bf",
    "metadata": {},
    "outputs": [
@@ -282,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "3c9801ee",
    "metadata": {},
    "outputs": [],
@@ -303,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "9c0e7894",
    "metadata": {},
    "outputs": [
@@ -321,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "91f9c283",
    "metadata": {},
    "outputs": [
@@ -339,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "b0d5bbf5",
    "metadata": {},
    "outputs": [
@@ -365,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "df66669a",
    "metadata": {},
    "outputs": [],
@@ -387,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "06e8c91d",
    "metadata": {},
    "outputs": [
@@ -395,7 +438,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pls enter your final grade:95\n"
+      "pls enter your final grade:90\n"
      ]
     }
    ],
@@ -405,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "f4a0bbcb",
    "metadata": {},
    "outputs": [
@@ -413,7 +456,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pls enter your normal homework grades:95\n"
+      "pls enter your normal homework grades:90\n"
      ]
     }
    ],
@@ -423,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "186d1516",
    "metadata": {},
    "outputs": [
@@ -431,7 +474,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pls enter your attendance:0.9\n"
+      "pls enter your attendance:90\n"
      ]
     }
    ],
@@ -441,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "9f9bdd14",
    "metadata": {},
    "outputs": [
@@ -449,7 +492,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pls enter your Mid-term grades:95\n"
+      "pls enter your Mid-term grades:90\n"
      ]
     }
    ],
@@ -459,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "88513eec",
    "metadata": {},
    "outputs": [
