--- a/Demos/python-jupyter-demo/导游考试题目图片-文字识别.ipynb
+++ b/Demos/python-jupyter-demo/导游考试题目图片-文字识别.ipynb
@@ -41,10 +41,10 @@
      "text": [
       "Requirement already satisfied: baidu-aip in /Users/apple/opt/anaconda3/lib/python3.8/site-packages (2.2.18.0)\r\n",
       "Requirement already satisfied: requests in /Users/apple/opt/anaconda3/lib/python3.8/site-packages (from baidu-aip) (2.25.1)\r\n",
-      "Requirement already satisfied: chardet<5,>=3.0.2 in /Users/apple/opt/anaconda3/lib/python3.8/site-packages (from requests->baidu-aip) (4.0.0)\r\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/apple/opt/anaconda3/lib/python3.8/site-packages (from requests->baidu-aip) (2020.12.5)\r\n",
       "Requirement already satisfied: idna<3,>=2.5 in /Users/apple/opt/anaconda3/lib/python3.8/site-packages (from requests->baidu-aip) (2.10)\r\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/apple/opt/anaconda3/lib/python3.8/site-packages (from requests->baidu-aip) (1.26.4)\r\n"
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/apple/opt/anaconda3/lib/python3.8/site-packages (from requests->baidu-aip) (1.26.4)\r\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/apple/opt/anaconda3/lib/python3.8/site-packages (from requests->baidu-aip) (2020.12.5)\r\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in /Users/apple/opt/anaconda3/lib/python3.8/site-packages (from requests->baidu-aip) (4.0.0)\r\n"
      ]
     }
    ],
@@ -145,8 +145,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 获取所有需要文字识别的文件路径，文件路径为 imgaeBaseUrl + namePrefix + [nameRangeMin, nameRangeMax] + '.jpg'\n",
-    "# eg: /Users/apple/zyc/zhl/旅游管理题目/6/图片-迅捷0_01.jpg\n",
+    "# 获取所有需要文字识别的文件路径，文件路径为 imgaeBaseUrl + namePrefix + [startIndex, endIndex] + '.jpg'\n",
+    "# eg: /Users/apple/zyc/zhl/旅游管理题目/6/图片-迅捷/0_01.jpg\n",
     "def identifyAllPictures(imgaeBaseUrl, namePrefix, startIndex, endIndex):\n",
     "    urls = []\n",
     "    for index in range(startIndex, endIndex+1):\n",
@@ -170,7 +170,7 @@
      "text": [
       "['/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_23.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_24.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_25.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_26.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_27.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_28.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_29.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_30.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_31.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_32.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_33.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_34.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_35.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_36.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_37.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_38.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_39.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_40.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_41.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_42.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_43.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_44.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_45.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_46.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_47.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_48.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_49.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_50.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_51.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_52.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_53.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_54.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_55.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_56.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_57.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_58.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_59.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_60.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_61.jpg', '/Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_62.jpg']\n",
       "开始识别 /Users/apple/zyc/zhl/旅游管理题目/8/图片-迅捷/0_23.jpg\n",
-      "text {'error_code': 17, 'error_msg': 'Open api daily request limit reached'}\n"
+      "error {'error_code': 17, 'error_msg': 'Open api daily request limit reached'}\n"
      ]
     },
     {
@@ -181,7 +181,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-8-bc2073ba98f3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfilterData\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0murl\u001b[0m \u001b[0;32min\u001b[0m \u001b[0murls\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcharacterRecognition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'result'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mfilterData\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfilterData\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'filter'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-6-6001ab444189>\u001b[0m in \u001b[0;36mcharacterRecognition\u001b[0;34m(url)\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbasicAccurate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mwords_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"words_result\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mfilterData\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-08221d7d59dd>\u001b[0m in \u001b[0;36mcharacterRecognition\u001b[0;34m(url)\u001b[0m\n\u001b[1;32m     12\u001b[0m             \u001b[0;31m# 超出调用限制时会报错：Open api daily request limit reached\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'error'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mwords_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtext\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"words_result\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mfilterData\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyError\u001b[0m: 'words_result'"
      ]
     }
